--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <script>
+      (function(h,o,u,n,d) {
+        h=h[d]=h[d]||{q:[],onReady:function(c){h.q.push(c)}}
+        d=o.createElement(u);d.async=1;d.src=n
+        n=o.getElementsByTagName(u)[0];n.parentNode.insertBefore(d,n)
+      })(window,document,'script','https://www.datadoghq-browser-agent.com/us1/v6/datadog-rum.js','DD_RUM')
+      window.DD_RUM.onReady(function() {
+        window.DD_RUM.init({
+          clientToken: 'pub3cd2b44e865fb3ea87dd76926dc290f2',
+          applicationId: '56795d49-793a-4c00-b837-c9ed042e93e7',
+          site: 'datadoghq.com',
+          service: 'ionic-web',
+          env: 'dev-ionic-web',
+          version: '1.0.0',
+          sessionSampleRate: 100,
+          sessionReplaySampleRate: 100,
+          trackBfcacheViews: true,
+          defaultPrivacyLevel: 'allow',
+	  trackLongTasks: true,
+        });
+      })
+    </script>
   </head>
 
   <body>
